--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install python-telegram-bot python-socketio aiohttp
 
       - name: Run Bot 24/7
@@ -25,35 +26,32 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
+          python -u telegram_paper_trading_bot.py &
+          BOT_PID=$!
+          
           python -c "
           import asyncio
-          import os
-          from telegram import Bot
-          from telegram.ext import Application, CommandHandler
           import socketio
+          import os
+          import signal
+          import sys
 
           sio = socketio.AsyncClient()
 
-          async def start(update, context):
-              await update.message.reply_text('Bot rodando 24/7! 🚀')
-
           async def main():
-              app = Application.builder().token(os.getenv('TELEGRAM_BOT_TOKEN')).build()
-              app.add_handler(CommandHandler('start', start))
-              
-              await sio.connect('https://socket.xf.bs')
-              print('✅ Conectado ao socket - Bot online 24/7')
-              
-              bot = Bot(os.getenv('TELEGRAM_BOT_TOKEN'))
-              await bot.send_message(chat_id=os.getenv('TELEGRAM_CHAT_ID'), text='✅ Bot online!')
-              
-              async def keep_alive():
+              try:
+                  await sio.connect('https://socket.xf.bs', transports=['websocket'])
+                  print('✅ Socket conectado - Bot rodando 24/7')
+                  
                   while True:
-                      await sio.emit('ping')
+                      await sio.emit('ping', {'bot': 'telegram_paper_trading'})
                       await asyncio.sleep(250)
-              
-              asyncio.create_task(keep_alive())
-              await app.run_polling()
+              except Exception as e:
+                  print(f'Erro: {e}')
+                  os.kill($BOT_PID, signal.SIGTERM)
+                  sys.exit(1)
 
           asyncio.run(main())
-          "
+          " &
+          
+          wait $BOT_PID
