--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-ccxt>=4.5.0
+ccxt==4.2.25
 pandas==2.1.4
 numpy==1.26.3
 python-dotenv==1.0.0
-matplotlib==3.8.2
 requests==2.31.0
+matplotlib==3.8.2
+holidays==0.39
+pytz==2023.3
