--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,47 +1,41 @@
-name: Paper Trading Bot - 13h
+name: Paper Trading Bot
 
 on:
   schedule:
-    - cron: '0 16 * * *'   # 13h horário de Brasília (UTC-3)
-  workflow_dispatch:      # permite rodar manualmente
+    # Roda todo dia às 16:10 BRT (19:10 UTC)
+    - cron: '10 19 * * *'
+  
+  workflow_dispatch:  # Permite rodar manualmente
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-
+          python-version: '3.10'
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt --no-cache-dir
-
-      - name: Run Bot
+          pip install -r requirements.txt
+      
+      - name: Run Paper Trading Bot
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          echo "🚀 Bot iniciado às $(date '+%d/%m/%Y %H:%M') horário de Brasília"
           python telegram_paper_trading_bot.py
-          echo "✅ Bot finalizado com sucesso!"
-
-      - name: Send success message to Telegram
-        if: success()
+      
+      - name: Commit and push data
         run: |
-          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
-            -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="✅ *BOT RODADO COM SUCESSO!*%0A📅 $(date '+%d/%m/%Y')%0A🕐 $(date '+%H:%M') horário de Brasília%0A💚 Tudo certo por aqui!" \
-            -d parse_mode=Markdown
-
-      - name: Send error message if failed
-        if: failure()
-        run: |
-          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
-            -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="❌ *ERRO AO RODAR O BOT*%0A📅 $(date '+%d/%m/%Y às %H:%M')%0A🔴 Verifique os logs no GitHub Actions" \
-            -d parse_mode=Markdown
+          git config --global user.name 'GitHub Actions Bot'
+          git config --global user.email 'actions@github.com'
+          git add data/
+          git diff --quiet && git diff --staged --quiet || git commit -m "📊 Update trading data [$(date +'%Y-%m-%d %H:%M')]"
+          git push
