--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -7,6 +7,9 @@ on:
   
   workflow_dispatch:  # Permite rodar manualmente
 
+permissions:
+  contents: write  # Permissão para fazer commit
+
 jobs:
   run-bot:
     runs-on: ubuntu-latest
@@ -14,6 +17,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -34,8 +40,7 @@ jobs:
       
       - name: Commit and push data
         run: |
-          git config --global user.name 'GitHub Actions Bot'
-          git config --global user.email 'actions@github.com'
+          git config --local user.name 'github-actions[bot]'
+          git config --local user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/
-          git diff --quiet && git diff --staged --quiet || git commit -m "📊 Update trading data [$(date +'%Y-%m-%d %H:%M')]"
-          git push
+          git diff --quiet && git diff --staged --quiet || (git commit -m "📊 Update trading data [$(date +'%Y-%m-%d %H:%M')]" && git push)
